--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 25vmin;
   pointer-events: none;
 }
 
@@ -13,13 +13,21 @@
   }
 }
 
+.Header {
+  padding: 8px;
+  font-size: large;
+  align-items: flex-start;
+  line-height: 2ch;
+}
+.button {
+  padding: 0px 0px;
+  border-radius: 50%;
+}
 .App-header {
-  background-color: #282c34;
+  background-color: #67376b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
